--- a/shop/bongs/index.html
+++ b/shop/bongs/index.html
@@ -472,7 +472,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡24.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/bongs/ice-bong-20cm/">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/bongs">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -498,7 +498,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡22.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/bongs/silicone-bubbler/">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/bongs">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -526,7 +526,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡26.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/bongs/percolator-bong/">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/bongs">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -548,7 +548,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡25.000</strong> </p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/bongs/silicone-fortress/">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/bongs">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -577,7 +577,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡28.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/bongs/honeycomb-bong/">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/bongs">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -604,7 +604,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡29.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/bongs/mask-bong/">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/bongs">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -628,7 +628,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡26.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/bongs/percolator-rasta-bong/">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/bongs">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -650,7 +650,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡45.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/bongs/hookah-shisha-nargila/">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/bongs">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -678,7 +678,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡19.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/bongs/wavy-mini-bong/">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/bongs">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -700,7 +700,7 @@
                                                 <div class="et_pb_blurb_description">
                                                     <p class="custom-btn-price"><strong>₡42.000</strong></p>
                                                     <p class="custom-btn-comprar">
-                                                        <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/bongs/perc-beaker-silicon/">
+                                                        <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/bongs">
                                                             <span class="text">Comprar</span>
                                                             <span class="bg"></span>
                                                         </a>
@@ -723,7 +723,7 @@
                                                 <div class="et_pb_blurb_description">
                                                     <p class="custom-btn-price"><strong>₡26.000</strong></p>
                                                     <p class="custom-btn-comprar">
-                                                        <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/bongs/chromoly-beaker-bong/">
+                                                        <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/bongs">
                                                             <span class="text">Comprar</span>
                                                             <span class="bg"></span>
                                                         </a>
@@ -747,7 +747,7 @@
                                                 <div class="et_pb_blurb_description">
                                                     <p class="custom-btn-price"><strong>₡25.000</strong></p>
                                                     <p class="custom-btn-comprar">
-                                                        <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/bongs/neck-showerhead-perc-bong/">
+                                                        <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/bongs">
                                                             <span class="text">Comprar</span>
                                                             <span class="bg"></span>
                                                         </a>
