--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -479,7 +479,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡22.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/pipas">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -503,7 +503,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡10.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/pipas">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -526,7 +526,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡11.000</strong> </p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/pipas">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -548,7 +548,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡9000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/pipas">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -576,7 +576,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡9.500</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/pipas">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -600,7 +600,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡6.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/pipas">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -623,7 +623,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡6.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/pipas">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -649,7 +649,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡5.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/pipas">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -677,7 +677,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡6.900</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/pipas">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -724,7 +724,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡10.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/pipas">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -750,7 +750,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡8.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/pipas">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -777,7 +777,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡9.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/pipas">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -799,7 +799,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡9.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/pipas">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -843,7 +843,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡8.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/pipas">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -871,7 +871,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡6.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/pipas">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
