--- a/shop/vapes/index.html
+++ b/shop/vapes/index.html
@@ -466,7 +466,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡22.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/comprar/vaporizadores/bateria-evod-510/">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -490,7 +490,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡39.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/comprar/vaporizadores/bateria-slim-510/">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -513,7 +513,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡55.000</strong> </p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/comprar/vaporizadores/yocan-vane/">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -535,7 +535,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡24.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/comprar/vaporizadores/bateria-cookies-510/">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -563,7 +563,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡22.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/comprar/vaporizadores/bateria-510-gold/">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/vaporizadores">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
