--- a/shop/picadoras/index.html
+++ b/shop/picadoras/index.html
@@ -252,7 +252,7 @@
                                                             </div>
                                                         </div>
                                                   -->
-                                                        <a class="mega-menu-link" target="_blank" href="https://wa.me/50664682074/?text=" tabindex="0"> <i class="fab fa-whatsapp sap-icon"></i> </a>
+                                                        <a class="mega-menu-link" target="_blank" href="https://wa.me/50660113305/?text=" tabindex="0"> <i class="fab fa-whatsapp sap-icon"></i> </a>
                                                     </li>
                 
                 
@@ -372,7 +372,7 @@
             </div>
 
             <div class="et_pb_module et_pb_image et_pb_image_2_tb_header inline-block">
-                <a href="https://wa.me/50664682074/?text=" target="_blank" style="color: black !important;">
+                <a href="https://wa.me/50660113305/?text=" target="_blank" style="color: black !important;">
                     <i class="fab fa-whatsapp sap-icon"></i>
                 </a>
             </div>
@@ -524,7 +524,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡69.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/grinders">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -548,7 +548,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡7.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/grinders">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -593,7 +593,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡16.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/grinders">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -624,7 +624,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡49.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/grinders">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -648,7 +648,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡13.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/grinders">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -671,7 +671,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡17.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/grinders">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -693,7 +693,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$29.99</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/grinders">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -724,7 +724,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$19.99</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/grinders">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -748,7 +748,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡39.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/grinders">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -771,7 +771,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡17.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/grinders">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -793,7 +793,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡48.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/grinders">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -892,7 +892,7 @@
 
 
                                 <div class="et_pb_module et_pb_image et_pb_image_1_tb_footer">
-                                    <a href="https://wa.me/50664682074/?text=Por favor escríba aquí su consulta:)" target="_blank" class="custom-a-social">
+                                    <a href="https://wa.me/50660113305/?text=Por favor escríba aquí su consulta:)" target="_blank" class="custom-a-social">
                                         <i class="fab fa-whatsapp sap-icon"></i>
                                     </a>
                                 </div>
