--- a/shop/accesorios/index.html
+++ b/shop/accesorios/index.html
@@ -241,7 +241,7 @@
                                             </div>
                                         </div>
                                   -->
-                                        <a class="mega-menu-link" target="_blank" href="https://wa.me/50664682074/?text=" tabindex="0"> <i class="fab fa-whatsapp sap-icon"></i> </a>
+                                        <a class="mega-menu-link" target="_blank" href="https://wa.me/50660113305/?text=" tabindex="0"> <i class="fab fa-whatsapp sap-icon"></i> </a>
                                     </li>
 
 
@@ -359,7 +359,7 @@
                             </div>
 
                             <div class="et_pb_module et_pb_image et_pb_image_2_tb_header inline-block">
-                                <a href="https://wa.me/50664682074/?text=" target="_blank" style="color: black !important;">
+                                <a href="https://wa.me/50660113305/?text=" target="_blank" style="color: black !important;">
                                     <i class="fab fa-whatsapp sap-icon"></i>
                                 </a>
                             </div>
@@ -511,7 +511,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$9.99</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/accesorios">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -537,7 +537,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡12.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/accesorios">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -565,7 +565,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$1.99</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/accesorios">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -584,7 +584,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$0.99</strong> </p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/accesorios">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -613,7 +613,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$14.99</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/accesorios">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -640,7 +640,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$39.99</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/accesorios">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -670,7 +670,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$9.99</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/accesorios">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -698,7 +698,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$1.00</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/accesorios">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -726,7 +726,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$9.99</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/accesorios">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -752,7 +752,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$18.40</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/accesorios">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -780,7 +780,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$5.50</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/accesorios">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -802,7 +802,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$17.99</strong> </p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/accesorios">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -833,7 +833,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$5.20</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/accesorios">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -857,7 +857,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>5.99</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/accesorios">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -881,7 +881,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$3.99</strong> </p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/accesorios">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -902,7 +902,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$4.99</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/accesorios">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -933,7 +933,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$17.99</strong> <span class="cs-sold-out">agotado</span> </p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                                <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/accesorios">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -957,7 +957,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$24.99</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/accesorios">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -980,7 +980,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$9.99</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/accesorios">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -1002,7 +1002,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>$19.99</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/50664682074/?text=">
+                                                            <a class="more btn btn--black" target="" href="https://smokeshop.ml/collections/accesorios">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -1104,7 +1104,7 @@
 
 
                                 <div class="et_pb_module et_pb_image et_pb_image_1_tb_footer">
-                                    <a href="https://wa.me/50664682074/?text=" target="_blank" class="custom-a-social">
+                                    <a href="https://wa.me/50660113305/?text=" target="_blank" class="custom-a-social">
                                         <i class="fab fa-whatsapp sap-icon"></i>
                                     </a>
                                 </div>
