--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
 
                         <div class="et_pb_with_border et_pb_module et_pb_text et_pb_text_2_tb_footer et_clickable  et_pb_text_align_left et_pb_bg_layout_light">
 
-                            <div class="et_pb_text_inner"><h2>smoke shop</h2>
+                            <div class="et_pb_text_inner"><h2>Smoke Shop Online</h2>
                             </div>
 
                         </div>
@@ -927,7 +927,7 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
 <script type='text/javascript' src='https://www.herbal.ml/wp-includes/js/wp-embed.min.js?ver=5.8.1' id='wp-embed-js'></script>
 
 <!--Start of Tawk.to Script-->
-<!--<script type="text/javascript">
+<script type="text/javascript">
     var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
     (function(){
         var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
@@ -937,7 +937,7 @@ Cuando se trata de intentar animar una fiesta o socializar con tus amigos, no ha
         s1.setAttribute('crossorigin','*');
         s0.parentNode.insertBefore(s1,s0);
     })();
-</script>-->
+</script>
 <!--End of Tawk.to Script-->
 
 </body>
