--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div class="et_pb_row et_pb_row_0_tb_header">
                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_0_tb_header  et_pb_css_mix_blend_mode_passthrough et-last-child">
                             <div class="et_pb_module et_pb_text et_pb_text_0_tb_header et_clickable  et_pb_text_align_center et_pb_bg_layout_light">
-                                <div class="et_pb_text_inner"><p>🇨🇷 SERVICIO EXPRESS 24/7 🔥</p></div>
+                                <div class="et_pb_text_inner"><p>🇨🇷  Envío gratis en compras mayores a ₡50.000</p></div>
                             </div>
                         </div>
                     </div>
@@ -690,7 +690,7 @@
                                 <div class="et_pb_module et_pb_text et_pb_text_0_tb_footer cus-animate  et_pb_text_align_center et_pb_bg_layout_light">
                                     <div class="et_pb_text_inner">
                                         <p>
-                                            HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • HERBALIST SMOKE SHOP • ACCESORIOS 4:20
+                                            SMOKE SHOP • SMOKE SHOP • SMOKE SHOP • SMOKE SHOP • SMOKE SHOP • SMOKE SHOP • SMOKE SHOP • SMOKE SHOP • SMOKE SHOP • SMOKE SHOP • ACCESORIOS 4:20
                                         </p>
                                     </div>
                                 </div>
