--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -136,7 +136,7 @@
                     <div class="et_pb_row et_pb_row_0_tb_header">
                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_0_tb_header  et_pb_css_mix_blend_mode_passthrough et-last-child">
                             <div class="et_pb_module et_pb_text et_pb_text_0_tb_header et_clickable  et_pb_text_align_center et_pb_bg_layout_light">
-                                <div class="et_pb_text_inner"><p>🇨🇷 SERVICIO EXPRESS 24/7 🔥</p></div>
+                                <div class="et_pb_text_inner"><p>🇨🇷 ENVÍO GRATIS EN COMPRAS MAYORES A ₡50.000</p></div>
                             </div>
                         </div>
                     </div>
@@ -376,7 +376,7 @@
                             </div>
 
                             <div class="et_pb_module et_pb_image et_pb_image_2_tb_header inline-block">
-                                <a href="https://wa.me/50664682074/?text=" target="_blank" style="color: black !important;">
+                                <a href="https://wa.me/50671583794/?text=" target="_blank" style="color: black !important;">
                                     <i class="fab fa-whatsapp sap-icon"></i>
                                 </a>
                             </div>
